# nora_auth

./: Cargo.toml  Readme.md
.devcontainer/: devcontainer.json
migrations/2024-04-04-201632_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
