[package]
name = "nora_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
chrono = "0.4.37"
dotenvy = "0.15"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
argon2 = "0.5.3"